--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a href="#attorneys" class="nav-link">Attorneys</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Practice Areas</a>
+                        <a href="#practiceAreas" class="nav-link">Practice Areas</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">About Us</a>
@@ -136,7 +136,7 @@
                 
                 <div class="col-12 mt-5">
                     <div class="row">
-                        <div class="col-12 col-md-4">
+                        <div class="col-12 col-md-4 mb-4 mb-md-0">
                             <div class="card">
                                 <div class="card-body">
                                     <div class="pb-4">
@@ -148,7 +148,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-4">
+                        <div class="col-12 col-md-4 mb-4 mb-md-0">
                             <div class="card">
                                 <div class="card-body">
                                     <div class="pb-4">
@@ -160,7 +160,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-4">
+                        <div class="col-12 col-md-4 mb-4 mb-md-0">
                             <div class="card">
                                 <div class="card-body">
                                     <div class="pb-4">
@@ -173,6 +173,37 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div id="practiceAreas">
+            <div class="row row-content">
+                <div class="col-12 col-content">
+                    <h2 class="text-center">Area of Practices</h2>
+                </div>
+                <div class="col-12 col-md-8 d-flex mb-4 justify-content-center align-items-end">
+                    <img src="images/business-law-2.png" alt="Business Law" class="img-fluid">
+                    <h4 class="position-absolute pb-2 pb-md-4 text-center">BUSINESS LAW</h4>
+                </div>
+                <div class="col-6 col-md-4 d-flex mb-4 justify-content-center align-items-end">
+                    <img src="images/partnership-law.png" alt="Partnership Law" class="img-fluid">
+                    <h4 class="position-absolute pb-2 pb-md-4 text-center">PARTNERSHIP LAW</h4>
+                </div>
+                <div class="col-6 col-md-4 d-flex mb-4 justify-content-center align-items-end">
+                    <img src="images/real-estate-law.png" alt="Real Estate Law" class="img-fluid">
+                    <h4 class="position-absolute pb-2 pb-md-4 text-center">REAL ESTATE LAW</h4>
+                </div>
+                <div class="col-12 col-md-8 d-flex mb-4 justify-content-center align-items-end">
+                    <img src="images/business-law-3.png" alt="Business Law" class="img-fluid">
+                    <h4 class="position-absolute pb-2 pb-md-4 text-center">BUSINESS LAW</h4>
+                </div>
+                <div class="col-12 col-md-8 d-flex mb-4 justify-content-center align-items-end">
+                    <img src="images/landlord-disputes.png" alt="Landlord Disputes" class="img-fluid">
+                    <h4 class="position-absolute pb-2 pb-md-4 text-center">LANDLORD DISPUTES</h4>
+                </div>
+                <div class="col-6 col-md-4 d-flex mb-4 justify-content-center align-items-end">
+                    <img src="images/elder-abuse.png" alt="Elder Abuse" class="img-fluid">
+                    <h4 class="position-absolute pb-2 pb-md-4 text-center">ELDER ABUSE</h4>
                 </div>
             </div>
         </div>
