Aboutus | Our Team

--- a/index.html
+++ b/index.html
@@ -207,6 +207,135 @@
                 </div>
             </div>
         </div>
+
+        <div id="aboutus">
+            <div class="row row-content">
+                <div class="col-12 col-md-5 mb-5">
+                    <h2 class="text-center text-md-left">What says our happy Clients</h2>
+                </div>
+                <div class="d-none d-md-flex col-md-3 offset-md-4 justify-content-end align-items-end mb-5">
+                    <button class="btn btn-light rounded-circle btn-lg mr-2">
+                        <span class="fa fa-arrow-left text-dark"></span>
+                    </button>
+                    <button class="btn btn-warning rounded-circle btn-lg">
+                        <span class="fa fa-arrow-right text-dark"></span>
+                    </button>
+                </div>
+                <div class="col-12 col-md-4 mb-4 mb-md-0">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="images/persona.png" alt="Foto de Jane Cooper">
+                            <h4 class="card-title mt-4">Jane Cooper</h4>
+                            <h6 class="card-subtitle">Ceo of Hunt</h6>
+                            <p class="card-text mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, fugiat.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 mb-4 mb-md-0">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="images/persona.png" alt="Foto de Michael Laweet">
+                            <h4 class="card-title mt-4">Michael Laweet</h4>
+                            <h6 class="card-subtitle">Ceo of Google</h6>
+                            <p class="card-text mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, fugiat.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 mb-4 mb-md-0">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="images/persona.png" alt="Foto de Harry Kent">
+                            <h4 class="card-title mt-4">Harry Kent</h4>
+                            <h6 class="card-subtitle">Animator</h6>
+                            <p class="card-text mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, fugiat.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-content">
+                <div class="col-12 mb-5">
+                    <h2 class="text-center">Our Team</h2>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 mb-4">
+                    <div class="card border-0">
+                        <div class="card-body py-2 px-4">
+                            <div class="media">
+                                <img class="mr-3 align-self-center" src="images/persona.png" alt="Imagen de Danial Def">
+                                <div class="media-body">
+                                    <h5 class="font-weight-bold mt-3 mb-1">Danial Def</h5>
+                                    <p>301 Cases</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 mb-4">
+                    <div class="card border-0 bg-add">
+                        <div class="card-body py-2 px-4">
+                            <div class="media">
+                                <img class="mr-3 align-self-center" src="images/persona.png" alt="Imagen de Danial Def">
+                                <div class="media-body">
+                                    <h5 class="font-weight-bold mt-3 mb-1">Sanfole</h5>
+                                    <p>850 Cases</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 mb-4">
+                    <div class="card border-0">
+                        <div class="card-body py-2 px-4">
+                            <div class="media">
+                                <img class="mr-3 align-self-center" src="images/persona.png" alt="Imagen de Danial Def">
+                                <div class="media-body">
+                                    <h5 class="font-weight-bold mt-3 mb-1">Danial Def</h5>
+                                    <p>301 Cases</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 mb-4">
+                    <div class="card border-0">
+                        <div class="card-body py-2 px-4">
+                            <div class="media">
+                                <img class="mr-3 align-self-center" src="images/persona.png" alt="Imagen de Danial Def">
+                                <div class="media-body">
+                                    <h5 class="font-weight-bold mt-3 mb-1">Danial Def</h5>
+                                    <p>301 Cases</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 mb-4">
+                    <div class="card border-0">
+                        <div class="card-body py-2 px-4">
+                            <div class="media">
+                                <img class="mr-3 align-self-center" src="images/persona.png" alt="Imagen de Danial Def">
+                                <div class="media-body">
+                                    <h5 class="font-weight-bold mt-3 mb-1">Danial Def</h5>
+                                    <p>301 Cases</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 mb-4">
+                    <div class="card border-0">
+                        <div class="card-body py-2 px-4">
+                            <div class="media">
+                                <img class="mr-3 align-self-center" src="images/persona.png" alt="Imagen de Danial Def">
+                                <div class="media-body">
+                                    <h5 class="font-weight-bold mt-3 mb-1">Danial Def</h5>
+                                    <p>301 Cases</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
