--- a/index.html
+++ b/index.html
@@ -335,6 +335,70 @@
                     </div>
                 </div>
             </div>
+            <div class="row row-content">
+                <div class="col-12 mb-3">
+                    <h2 class="text-center text-md-left">FAQ</h2>
+                </div>
+                <div class="col-12 col-md-5 mb-4 mb-md-0">
+                    <p class="text-center text-md-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam, debitis!</p>
+                </div>
+                <div class="col-12 col-md-6 offset-md-1">
+                    <div class="border-bottom pb-4 pb-md-5">
+                        <h4 class="mb-4">Do I need personal injury report?</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem, facilis beatae repudiandae quod veniam iste maiores doloremque quibusdam ad animi?</p>
+                    </div>
+                    <div class="border-bottom py-4 py-md-5">
+                        <div class="row align-items-center justify-content-between">
+                            <div class="col-10">
+                                <h4>How much is my case worth?</h4>
+                            </div>
+                            <div class="col-auto">
+                                <button class="btn btn-warning btn-sm rounded-circle font-weight-bolder">
+                                    +
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border-bottom py-md-5 py-4">
+                        <div class="row align-items-center justify-content-between">
+                            <div class="col-10">
+                                <h4>What should I do right after car accident</h4>
+                            </div>
+                            <div class="col-auto">
+                                <button class="btn btn-warning btn-sm rounded-circle font-weight-bolder">
+                                    +
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="py-md-5 py-4">
+                        <div class="row align-items-center justify-content-between">
+                            <div class="col-10">
+                                <h4>How much is my case worth?</h4>
+                            </div>
+                            <div class="col-auto">
+                                <button class="btn btn-warning btn-sm rounded-circle font-weight-bolder">
+                                    +
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-content">
+                <div class="col-12">
+                    <div class="bg-law-secondary jumbotron">
+                        <h2 class="text-center">Subscribe Our Newsletter</h2>
+                        <div class="d-flex justify-content-center">
+                            <form class="form-inline">
+                                <input type="text" id="name" class="form-control mb-2 mr-sm-2" placeholder="Name">
+                                <input type="text" id="email" class="form-control mb-2 mr-sm-2" placeholder="Enter your Email">
+                                <button class="btn btn-warning mb-2 mr-sm-2 font-weight-bold">Send</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
