--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Law Firm</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -401,6 +402,53 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="container py-5">
+            <div class="row py-5">
+                <div class="col-auto col-md-3">
+                    <a href="#home">
+                        <img src="images/logo.png" alt="IGStudio Logo">
+                    </a>
+                </div>
+                <div class="col-5 col-md-6">
+                    <ul class="nav justify-content-between">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#attorneys">Attorneys</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#practiceAreas">Practice Areas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#aboutus">About Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-2 col-md-3">
+                    <div class="text-center">
+                        <a class="mb-2 mb-md-0 btn btn-social-icon btn-instagram" href="http://google.com/+"><i class="fa fa-instagram fa-lg"></i></a>
+                        <a class="mb-2 mb-md-0 btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
+                        <a class="mb-2 mb-md-0 btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
+                        <a class="mb-2 mb-md-0 btn btn-social-icon btn-pinterest" href="http://pinterest.com/"><i class="fa fa-pinterest fa-lg"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-12 text-center col-md-auto">
+                    <a href="#" class="text-decoration-none">&copy; 2020 Acme. All right reserved.</a>
+                </div>
+                <div class="col-auto">
+                    <a href="#" class="text-decoration-none">Privacy Policy</a>
+                </div>
+                <div class="col-auto">
+                    <a href="#" class="text-decoration-none">Terms of Service</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
