--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <div class="card-body">
                             <img src="images/persona.png" alt="Foto de Jane Cooper">
                             <h4 class="card-title mt-4">Jane Cooper</h4>
-                            <h6 class="card-subtitle">Ceo of Hunt</h6>
+                            <h6 class="card-subtitle"><span class="badge badge-warning p-2">Ceo of Hunt</span></h6>
                             <p class="card-text mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, fugiat.</p>
                         </div>
                     </div>
@@ -237,7 +237,7 @@
                         <div class="card-body">
                             <img src="images/persona.png" alt="Foto de Michael Laweet">
                             <h4 class="card-title mt-4">Michael Laweet</h4>
-                            <h6 class="card-subtitle">Ceo of Google</h6>
+                            <h6 class="card-subtitle"><span class="badge badge-info p-2">Ceo of Google</span></h6>
                             <p class="card-text mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, fugiat.</p>
                         </div>
                     </div>
@@ -247,7 +247,7 @@
                         <div class="card-body">
                             <img src="images/persona.png" alt="Foto de Harry Kent">
                             <h4 class="card-title mt-4">Harry Kent</h4>
-                            <h6 class="card-subtitle">Animator</h6>
+                            <h6 class="card-subtitle"><span class="badge badge-danger p-2">Animator</span></h6>
                             <p class="card-text mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, fugiat.</p>
                         </div>
                     </div>
